2006-07-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* setup_tools/check_perlthreading.pl: Quick test of multithreading
	support

2006-07-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/RRDStorage.pm (updateRRD):
	Added threading support: a background thread for RRD updates	

2006-07-20  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in: Added multithreading support

	* configure.ac: Multithreading checkup

	* NEWS: Torrus release 1.0.4

2006-05-17  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	RFC2863_IF_MIB::tokenset-members now accepts host names
	and can be defined at the global level.

2006-05-11  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	new discovery parameter: RFC2863_IF_MIB::noout

2006-03-09  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (buildConfig):
	New discovery parameter: RFC2863_IF_MIB::subtree-comment

	* perllib/Torrus/Renderer/Frontpage.pm (renderUserLogin):
	New config option: $Torrus::Renderer::lostPasswordURL

2006-03-01  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer/HTML.pm:
	New config variable: $Torrus::Renderer::companyLogo
	to display a logo instead of text

2006-02-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm: 'comment' parameter is copied
	from DDX to the host level.

2006-02-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Monitor.pm: New monitor parameters:
	display-rpn-expr display-format
	(run_event_exec): New environment variable: TORRUS_DISPLAY_VALUE

2006-02-15  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (discover):
	New discovery parameter: suppress-legend
