@@ -1,3 +1,8 @@
+2006-07-31  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoFirewall.pm (discover):
+	Interface names taken from ifName
+
 2006-07-24  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* setup_tools/check_perlthreading.pl: Quick test of multithreading
